kubernetes/apps/base/paperless/network.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-except-namespace
  namespace: paperless
spec:
  description: "Allow traffic only to the namespace itself"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": paperless
  ingress:
    - fromEndpoints:
        - matchLabels: {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-cluster
  namespace: paperless
spec:
  description: "Allow CloudNativePG pods access"
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: paperless-cluster
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: paperless
            app.kubernetes.io/instance: paperless
            app.kubernetes.io/name: paperless
      toPorts:
        - ports:
            - port: postgresql
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-egress
  namespace: paperless
spec:
  description: "Allow egress to centralized Dragonfly (dragonfly namespace)"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dragonfly
            app.kubernetes.io/part-of: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-server
  namespace: paperless
spec:
  description: "Allow traffic from and to paperless server"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/instance: paperless
      app.kubernetes.io/controller: main
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: http
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: pangolin
            app.kubernetes.io/name: pangolin
            app.kubernetes.io/component: newt
      toPorts:
        - ports:
            - port: http
              protocol: TCP
  egress:
    - toFQDNs:
        - matchName: debian.map.fastlydns.net
        - matchName: deb.debian.org
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: authentik.${EXTERNAL_DOMAIN}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: maddy
            app.kubernetes.io/name: maddy
            app.kubernetes.io/instance: maddy
      toPorts:
        - ports:
            - port: smtp
              protocol: TCP
    # Global Tika content-extraction service (cross-namespace shared utility)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tika
            app.kubernetes.io/name: tika
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: litellm
            app.kubernetes.io/name: litellm
            app.kubernetes.io/instance: litellm
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gotenberg
  namespace: paperless
spec:
  description: "Allow Paperless consume to reach Gotenberg (in-namespace); Gotenberg has no outbound needs"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/instance: paperless
      app.kubernetes.io/controller: gotenberg
  ingress:
    # Only the Paperless main pod may call Gotenberg
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: paperless
            app.kubernetes.io/name: paperless
            app.kubernetes.io/instance: paperless
            app.kubernetes.io/controller: main
      toPorts:
        - ports:
            - port: http
              protocol: TCP
  egress: []
